z-index issue

--- a/index1.css
+++ b/index1.css
@@ -165,7 +165,6 @@ body {
     position: absolute;
     top: 0rem;
     width: 100vw;
-    z-index: 2;
 }
 
 .definition {
